{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 199,
  "lineage": "388ea50c-b1e5-be72-c36d-e17739e35199",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_service",
      "name": "nginx_ingress_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/nginx-ingress-controller",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-ingress-controller",
                "namespace": "ingress-nginx"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/backend-protocol": "HTTPS"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "argocd-ingress",
                "namespace": "argocd",
                "resource_version": "39795",
                "uid": "5eb2755d-2a23-43c2-9504-3316ebbd7098"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 443
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/argocd",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a069bc83d3fab440893094e804a5ca9c-1971437283.us-east-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.argocd.helm_release.argocd",
            "module.argocd.helm_release.nginx_ingress",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks.module.eks.aws_eks_addon.before_compute",
            "module.eks.module.eks.aws_eks_addon.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.data.tls_certificate.this",
            "module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks.module.eks.time_sleep.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:security-group/sg-0f79cf8227b9d4820",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f79cf8227b9d4820",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0c8d8dd7b634858"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pipeline-sandbox-cluster-20250620153132819200000004",
            "name_prefix": "pipeline-sandbox-cluster-",
            "owner_id": "365803995554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "pipeline-sandbox-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "pipeline-sandbox-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:security-group/sg-0c0c8d8dd7b634858",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0c8d8dd7b634858",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0643cb39db7f9640d"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-065d6912ed965a9ca",
                  "sg-0e4657dbbe6817fac"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c5353daca70209ad"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f79cf8227b9d4820"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f79cf8227b9d4820"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f79cf8227b9d4820"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f79cf8227b9d4820"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f79cf8227b9d4820"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f79cf8227b9d4820"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "pipeline-sandbox-node-20250620153132823900000005",
            "name_prefix": "pipeline-sandbox-node-",
            "owner_id": "365803995554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "pipeline-sandbox-node",
              "Terraform": "true",
              "kubernetes.io/cluster/pipeline-sandbox": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "pipeline-sandbox-node",
              "Terraform": "true",
              "kubernetes.io/cluster/pipeline-sandbox": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-661258507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f79cf8227b9d4820",
            "security_group_rule_id": "sgr-0cbb2bd899d551131",
            "self": false,
            "source_security_group_id": "sg-0c0c8d8dd7b634858",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-1774946583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-0ebb6747d4b5c751f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1168738758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-0357d8a70364667af",
            "self": false,
            "source_security_group_id": "sg-0f79cf8227b9d4820",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2429830863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-01f4a4926bc6b0547",
            "self": false,
            "source_security_group_id": "sg-0f79cf8227b9d4820",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1503011161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-0bfb366b8e7505703",
            "self": false,
            "source_security_group_id": "sg-0f79cf8227b9d4820",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1254759800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-05ccf15715e3b7a66",
            "self": false,
            "source_security_group_id": "sg-0f79cf8227b9d4820",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-778776243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-0c8ee0be720ec1ee9",
            "self": false,
            "source_security_group_id": "sg-0f79cf8227b9d4820",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4054523988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-014c857eed2b7a017",
            "self": false,
            "source_security_group_id": "sg-0f79cf8227b9d4820",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1545937810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-07fbf9075b24f3bc0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1129446535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-05ac34ace5b7c2a04",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3876478824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c0c8d8dd7b634858",
            "security_group_rule_id": "sgr-0bcd315556d28f64d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097bba20d4df1159a",
            "arn": "arn:aws:ec2:us-east-1:365803995554:elastic-ip/eipalloc-097bba20d4df1159a",
            "association_id": "eipassoc-0d7a723de2d492df5",
            "domain": "vpc",
            "id": "eipalloc-097bba20d4df1159a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-041c96dd45a83ca7b",
            "private_dns": "ip-10-0-0-211.ec2.internal",
            "private_ip": "10.0.0.211",
            "public_dns": "ec2-18-233-221-10.compute-1.amazonaws.com",
            "public_ip": "18.233.221.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-eip-1"
            },
            "tags_all": {
              "Name": "eks-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8c34d2f65777f80",
            "arn": "arn:aws:ec2:us-east-1:365803995554:elastic-ip/eipalloc-0e8c34d2f65777f80",
            "association_id": "eipassoc-0d279a90e54bfbdee",
            "domain": "vpc",
            "id": "eipalloc-0e8c34d2f65777f80",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a943d79f9805e226",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-3-91-125-145.compute-1.amazonaws.com",
            "public_ip": "3.91.125.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-eip-2"
            },
            "tags_all": {
              "Name": "eks-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:internet-gateway/igw-0871bb382890b001d",
            "id": "igw-0871bb382890b001d",
            "owner_id": "365803995554",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097bba20d4df1159a",
            "association_id": "eipassoc-0d7a723de2d492df5",
            "connectivity_type": "public",
            "id": "nat-08970dc7424bf96ab",
            "network_interface_id": "eni-041c96dd45a83ca7b",
            "private_ip": "10.0.0.211",
            "public_ip": "18.233.221.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ae60ba7e05fc1710",
            "tags": {
              "Name": "eks-nat-gateway-1"
            },
            "tags_all": {
              "Name": "eks-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8c34d2f65777f80",
            "association_id": "eipassoc-0d279a90e54bfbdee",
            "connectivity_type": "public",
            "id": "nat-07ffb8a716b60df1d",
            "network_interface_id": "eni-0a943d79f9805e226",
            "private_ip": "10.0.1.115",
            "public_ip": "3.91.125.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e57bdfb5adf4d3c",
            "tags": {
              "Name": "eks-nat-gateway-2"
            },
            "tags_all": {
              "Name": "eks-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:route-table/rtb-084c542482e51b064",
            "id": "rtb-084c542482e51b064",
            "owner_id": "365803995554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08970dc7424bf96ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-1"
            },
            "tags_all": {
              "Name": "eks-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:route-table/rtb-0f2543c412ee00124",
            "id": "rtb-0f2543c412ee00124",
            "owner_id": "365803995554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ffb8a716b60df1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt-2"
            },
            "tags_all": {
              "Name": "eks-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:route-table/rtb-0fc16da2acd48e179",
            "id": "rtb-0fc16da2acd48e179",
            "owner_id": "365803995554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0871bb382890b001d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "tags_all": {
              "Name": "eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf3d1fc5d5c29fa4",
            "route_table_id": "rtb-084c542482e51b064",
            "subnet_id": "subnet-035076e18e2696e5b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c9c643fbe371c0",
            "route_table_id": "rtb-0f2543c412ee00124",
            "subnet_id": "subnet-0c2a0eed375522b10"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f80df053b0dcfe1",
            "route_table_id": "rtb-0fc16da2acd48e179",
            "subnet_id": "subnet-0ae60ba7e05fc1710"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076917261a79dc3c3",
            "route_table_id": "rtb-0fc16da2acd48e179",
            "subnet_id": "subnet-04e57bdfb5adf4d3c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:subnet/subnet-035076e18e2696e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035076e18e2696e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365803995554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-1",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:subnet/subnet-0c2a0eed375522b10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2a0eed375522b10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365803995554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-2",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-2",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:subnet/subnet-0ae60ba7e05fc1710",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae60ba7e05fc1710",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "365803995554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-1",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:subnet/subnet-04e57bdfb5adf4d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e57bdfb5adf4d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "365803995554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-2",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-2",
              "kubernetes.io/cluster/pipeline-sandbox": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e23cea34a3061eed"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365803995554:vpc/vpc-0e23cea34a3061eed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0592dd91546e60696",
            "default_route_table_id": "rtb-01457a05564343eb7",
            "default_security_group_id": "sg-0a3af52e43c8b2341",
            "dhcp_options_id": "dopt-d9fcdaa3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e23cea34a3061eed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01457a05564343eb7",
            "owner_id": "365803995554",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/pipeline-sandbox": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/pipeline-sandbox": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}